<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment">

    <!-- Splash screen -->
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.geby.saldo.ui.splash.SplashFragment"
        android:label="Splash" >
        <action
            android:id="@+id/action_splash_to_onboarding"
            app:destination="@id/viewPagerFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_main"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Onboarding -->
    <fragment
        android:id="@+id/viewPagerFragment"
        android:name="com.geby.saldo.ui.onboarding.ViewPagerFragment"
        android:label="Onboarding"
        tools:layout="@layout/fragment_view_pager" >
        <action
            android:id="@+id/action_onboarding_to_main"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/viewPagerFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.geby.saldo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transaksi"
        android:name="com.geby.saldo.ui.transaksi.TransaksiFragment"
        android:label="@string/title_transaksi"
        tools:layout="@layout/fragment_transaksi" />

    <fragment
        android:id="@+id/navigation_tambah"
        android:name="com.geby.saldo.ui.tambah.TambahFragment"
        android:label="@string/title_tambah"
        tools:layout="@layout/fragment_tambah" />

    <fragment
        android:id="@+id/navigation_kategori"
        android:name="com.geby.saldo.ui.kategori.KategoriFragment"
        android:label="@string/title_kategori"
        tools:layout="@layout/fragment_kategori" />

    <fragment
        android:id="@+id/navigation_pengaturan"
        android:name="com.geby.saldo.ui.pengaturan.PengaturanFragment"
        android:label="@string/title_pengaturan"
        tools:layout="@layout/fragment_pengaturan" />


</navigation>